--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <form>
-    <label for="lastname">Votre nom  : </label><input type="text" name="lastname" id="fname" onfocusout="myFunction()"/>
+    <label for="lastname">Votre nom  : </label><input type="text" name="lastname" id="lastname" onfocusout="myFunction()"/>
   </form>
   <script src="assets/js/script.js"></script>
 </body>
